--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.0",
     "prettier": "^2.1.2"
+  },
+  "dependencies": {
+    "@jcoreio/deploy-clarity": "7.3.1"
   }
 }
